--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="nav-container">
             <nav class="nav" id="main-nav-container"> 
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Projects</a>
                 <a href="#">Contact</a>
             </nav>
