--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
                 <nav class="nav" id="main-nav-container"> 
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="#">Projects</a>
+                    <a href="projects.html">Projects</a>
                     <a href="#">Contact</a>
                 </nav>
             </div>
