--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="projects.html">Projects</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </nav>
             </div>
             <div class="About-Me-container">
