--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <nav class="nav" id="main-nav-container"> 
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
         <div class="hero-container">
