added a basic projects page

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </div>
             <div class="About-Me-container">
                 <h1 class="slideInLeft">About Me</h1>
-                <p>I am a web developer who likes creating amazing and functional websites. I have a strong understanding of HTML, CSS, and JavaScript. I also can work with a handfull of other languages, such as C and C# for Unity.</p>
+                <p class="slideInBottom">I am a web developer who likes creating amazing and functional websites. I have a strong understanding of HTML, CSS, and JavaScript. I also can work with a handfull of other languages, such as C and C# for Unity.</p>
             </div>
         </div>
     </body>
