made project 1 correct, added a better scrollbar

--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,12 @@
         <h1>Projects</h1>
         
         <h2 class="slideInLeft">Project 1</h2>
-        <p class="slideInBottom">This is a project that I worked on with a team of developers. We created a website for a local business. The website was designed to be user-friendly and informative. It also included a contact form so that customers could easily get in touch with the business.</p>
+        <p class="slideInBottom">This is a project I worked on by myself. It has a simple design and is easy to use. The webiste features front-end HTML and CSS. The games are made using JS or PJS. The website is fully responsive.</p>
+        <button class="btn" id="view-project-btn-1"><a href="https://johnathonr1.github.io/games/index.html">View Project 1</a></button>
 
         <h2 class="slideInLeft">Project 2</h2>
         <p class="slideInBottom">This is a project that I worked on by myself. I created a mobile app that allows users to track their spending. The app is easy to use and it provides users with valuable insights into their spending habits.</p>
+        <button class="btn" id="view-project-btn-2"><a href="https://johnathonr1.github.io/games/index.html">View Project 2</a></button>
 
         <h2 class="slideInLeft">Project 3</h2>
         <p class="slideInBottom">This is a project that I worked on with a team of designers. We created a logo for a new business. The logo was designed to be memorable and reflective of the business's brand.</p><ctrl63> 
