wrote about second project. Also made the button take you to the right page

--- a/projects.html
+++ b/projects.html
@@ -14,10 +14,10 @@
         <button class="btn" id="view-project-btn-1"><a href="https://johnathonr1.github.io/games/index.html">View Project 1</a></button>
 
         <h2 class="slideInLeft">Project 2</h2>
-        <p class="slideInBottom">This is a project that I worked on by myself. I created a mobile app that allows users to track their spending. The app is easy to use and it provides users with valuable insights into their spending habits.</p>
-        <button class="btn" id="view-project-btn-2"><a href="https://johnathonr1.github.io/games/index.html">View Project 2</a></button>
+        <p class="slideInBottom">I made this for a coding competition on KA. It shows that I have a strong understanding of PJS. The game was called space plant-it and can be played on mobile. The game was made using PJS.</p>
+        <button class="btn" id="view-project-btn-2"><a href="https://johnathonr1.github.io/games/SpacePlant-it.html">View Project 2</a></button>
 
         <h2 class="slideInLeft">Project 3</h2>
-        <p class="slideInBottom">This is a project that I worked on with a team of designers. We created a logo for a new business. The logo was designed to be memorable and reflective of the business's brand.</p><ctrl63> 
+        <p class="slideInBottom"></p><ctrl63> 
     </body>
 </html>
